--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=demo
+
+# Configurações da conexão com o banco de dados MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/banco?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=G@briel1525.
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configurações do Hibernate (JPA)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
