--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=demo
+spring.datasource.url=jdbc:mysql://localhost:3306/biblioteca
+spring.datasource.username=root
+spring.datasource.password=12345
+#senha do banco do senac 
+#spring.datasource.password=Senac2021 
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
