--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.password=12345
 #spring.datasource.password=Senac2021 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+
+api.security.token.secret=${JWT_SECRET:chaveSuperSecreta}
